Fix columns and gallery gap

--- a/.build/assets/styles/__blocks/_columns.scss
+++ b/.build/assets/styles/__blocks/_columns.scss
@@ -1,9 +1,14 @@
+body {
+    --wp--style--columns-gap-default: 2em;
+}
+
 .wp-block-column {
     @extend .h-stack;
 }
 
 .wp-block-columns {
     @extend .h-stack;
+    gap: var(--wp--style--columns-gap-default);
 
     @include tablet {
         flex-wrap: nowrap;
