--- a/.build/assets/styles/__blocks/_gallery.scss
+++ b/.build/assets/styles/__blocks/_gallery.scss
@@ -1,4 +1,6 @@
 .wp-block-gallery {
+    --wp--style--gallery-gap-default: var(--wp--style--columns-gap-default);
+
     clear: both;
 
     figcaption {
@@ -10,6 +12,10 @@
         body.logged-in & {
             pointer-events: all;
         }
+    }
+
+    &.has-nested-images {
+        gap: var(--wp--style--gallery-gap-default);
     }
 
     &.has-nested-images figure.wp-block-image figcaption {
